--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ skip_install = True
 usedevelop = False
 deps = flake8
 commands =
-    flake8 setup.py databases/frozen.py tests.py arcovid19.py --ignore=E402 {posargs}
+    flake8 setup.py databases/frozen.py tests arcovid19 --ignore=E402 {posargs}
 
 
 [testenv:coverage]
@@ -30,7 +30,7 @@ deps =
     pytest-xdist
 commands =
     - coverage erase
-    pytest tests.py --cov=arcovid19 --cov-append --cov-report= {posargs}
+    pytest tests --cov=arcovid19 --cov-append --cov-report= {posargs}
     coverage report --fail-under=80 -m
 
 
