--- a/tox.ini
+++ b/tox.ini
@@ -3,13 +3,14 @@
 envlist = py37, py38, style, coverage, docs
 
 [pytest]
-addopts = -n "auto"
+addopts = -n "auto" --mpl
 
 [testenv]
 deps =
     ipdb
     pytest
     pytest-xdist
+    pytest-mpl
 commands =
     pytest tests/ {posargs}
 
@@ -28,6 +29,7 @@ deps =
     coverage
     pytest-cov
     pytest-xdist
+    pytest-mpl
 commands =
     - coverage erase
     pytest tests --cov=arcovid19 --cov-append --cov-report= {posargs}
