--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py37, py38, style, coverage, docs
+envlist = style, py37, py38, docs, coverage
 
 [pytest]
 addopts = -n "auto" --mpl
