tox include check manifest

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,20 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = style, py37, py38, docs, coverage
+envlist = style, check-manifest, py37, py38, docs, coverage
 
 [pytest]
 addopts = -n "auto" --mpl
+
+
+[check-manifest]
+ignore =
+    .travis.yml
+    tox.ini
+    docs/**
+    report/**
+    databases/**
+    tests/**
+
 
 [testenv]
 deps =
@@ -14,6 +25,14 @@ deps =
 usedevelop = True
 commands =
     pytest tests/ {posargs}
+
+
+[testenv:check-manifest]
+skip_install = True
+usedevelop = False
+deps = check-manifest
+commands =
+    check-manifest
 
 
 [testenv:style]
