--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,11 @@ matrix:
         sudo: true
 
       - python: 3.7
+        env: TOXENV=check-manifest
+        dist: xenial
+        sudo: true
+
+      - python: 3.7
         env: TOXENV=coverage
         dist: xenial
         sudo: true
