--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,5 +2,5 @@ include *.md
 include LICENSE
 include README.rst
 
-recursive-include arcovid19/web/templates/ *.html
-recursive-include arcovid19/web/static/ *
+recursive-include arcovid19/web/templates *.html
+recursive-include arcovid19/web/static *
