--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,8 @@ addopts = -n "auto" --mpl
 [check-manifest]
 ignore =
     .travis.yml
+    Procfile
+    heroku_*
     tox.ini
     docs/**
     report/**
@@ -40,7 +42,7 @@ skip_install = True
 usedevelop = False
 deps = flake8
 commands =
-    flake8 setup.py databases/frozen.py tests arcovid19 --ignore=E402 {posargs}
+    flake8 setup.py heroku_conf.py databases/frozen.py tests arcovid19 --ignore=E402 {posargs}
 
 
 [testenv:coverage]
