i18 integrated but not totally translated

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,8 @@ ignore =
     heroku_*
     requirements.txt
     tox.ini
+    babel/babel.cfg
+    translate.py
     docs/**
     report/**
     databases/**
@@ -43,7 +45,7 @@ skip_install = True
 usedevelop = False
 deps = flake8
 commands =
-    flake8 setup.py heroku_conf.py databases/frozen.py tests arcovid19 --ignore=E402 {posargs}
+    flake8 translate.py setup.py heroku_conf.py databases/frozen.py tests arcovid19 --ignore=E402 {posargs}
 
 
 [testenv:coverage]
