--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,3 +4,4 @@ include README.rst
 
 recursive-include arcovid19/web/templates *.html
 recursive-include arcovid19/web/static *
+recursive-include arcovid19/web/translations *
