--- a/docs/requirements_docs.txt
+++ b/docs/requirements_docs.txt
@@ -1,6 +1,7 @@
 nbsphinx==0.5.1
 readthedocs-sphinx-ext==1.0.1
 sphinx-autobuild==0.7.1
+sphinx-rtd-theme==0.4.3
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==1.0.3
@@ -9,3 +10,6 @@ sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
 ipython
 ipykernel
+Flask==1.1.2
+Flask-Babel==1.0.0
+Flask-WTF==0.14.3
