base for web tutorial

--- a/tox.ini
+++ b/tox.ini
@@ -45,7 +45,7 @@ skip_install = True
 usedevelop = False
 deps = flake8
 commands =
-    flake8 translate.py setup.py heroku_conf.py databases/frozen.py tests arcovid19 --ignore=E402 {posargs}
+    flake8 translate.py setup.py databases/frozen.py tests arcovid19 --ignore=E402 {posargs}
 
 
 [testenv:coverage]
